<?xml version="1.0" encoding="utf-8"?>
<resources>
 	<string name="app_name">SimpleCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="intro_title">Simple calculator for adding.</string>
    <string name="num_doc">First Number</string>
    <string name="ppp">Second Number</string>
    <string name="q">Total</string>
    <string name="c">Equal</string>
    
    <string name="SSAddSong">Sesame Street Adding Lyrics Song: \r\n
         Adding is putting together, hmmm \r\n
         Adding is just what you do  \r\n
         If I have one cookie and you have one cookie \r\n
         Together they add up to two \r\n
         One cookie and one cookie makes two cookies \n
         One and one is two \n
         That is two, whoo  </string>
         
    <string name="addLearn">Learning Addition: \r\n
		Addition is one of the few things we learn in school that we 
		are actually asked to put into use every day of our lives. 
		Luckily, it is easy to learn how to add.</string>

</resources>